# gpt-precomit

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: pre_release.yml  release.yml
hooks/: add_docstring.py
